fragmentation units type b (FU-B) are not supported in gstrtph264depay
in gstrtph264depay fu-b packets are not handled correctly. the DON (decoder order number) bytes are ignored
case 29: { /* FU-A Fragmentation unit 5.8 */ /* FU-B Fragmentation unit 5.8 */ gboolean S, E;
note that the bytes ARE taken into account in the STAB-B packet type though:
case 25: /* STAP-B Single-time aggregation packet 5.7.1 */ /* 2 byte extra header for DON */ header_len += 2; /* fallthrough */
this causes a stream with packetization-mode = 2 (interleaved mode) to fail with this pluign